--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -157,6 +157,7 @@
     <string name="SEND_PASSWORD">SEND PASSWORD</string>
     <string name="FORGOT_PASSWORD">SEND PASSWORD</string>
     <string name="send_password">Send password to: </string>
+    <string name="confirm_email">メールにパスワードリセット用のリンクが送信されます。</string>
     <string name="USER">ユーザー</string>
     <string name="my_contacts">コンタクト</string>
     <string name="favorite_groups">お気に入りのグループ</string>
