--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -217,7 +217,7 @@
     <string name="logout_message">Do you want to logout?</string>
 
 
-    <string name="tutorial_login">Thank you for downloading Spika. Enjoy chatting :)";</string>
+    <string name="tutorial_login">Thank you for downloading Spika. Enjoy chatting :)</string>
     <string name="tutorial_recent">Thank you for signing up! This screen shows all of your unread messages. It\'s empty at the moment but soon it will be full of messages from your friends :)</string>
     <string name="tutorial_wall">This is the place where you can talk to a friend or post in a group. You can also send photo, voice and video. Try sending something to us!</string>
     <string name="tutorial_users">Find your friends here! You can search by name, explore by gender or age. Also, you can add friends to contact list so you could find conversations with them more easily.</string>
