--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="users">Users</string>
     <string name="groups">Groups</string>
     <string name="profile">Profile</string>
+    <string name="information">Information</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="search">Search</string>
@@ -109,6 +110,7 @@
     <string name="CHAT_ACTIVITY">CHAT ACTIVITY</string>
     <string name="GROUPS_ACTIVITY">GROUPS ACTIVITY</string>
     <string name="USERS_ACTIVITY">USERS ACTIVITY</string>
+    <string name="INFORMATION">INFORMATION</string>
     <string name="SETTINGS">SETTINGS</string>
     <string name="delete_group_message">Are you sure you want to delete this group?</string>
     <string name="no_internet_connection">No internet connection</string>
