--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -246,6 +246,6 @@
     <string name="delete_close">OK</string>
     
     <string name="select_server">SELECET SERVER</string>
-    <string name="add_server">Add server</string>
+    <string name="add_server">Custom URL</string>
     
 </resources>
