--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -117,6 +117,7 @@
     <string name="NO_INTERNET_CONNECTION">インターネット接続を確認して下さい。</string>
     <string name="can_not_connect_to_server">サーバに接続できません。</string>
     <string name="an_internal_error_has_occurred">内部エラーが発生しました。 (%1$s)</string>
+    <string name="token_expired_error">トークンが有効期限切れとなりました。</string>
     <string name="exit_app_message">アプリを閉じてもよろしいでしょうか？</string>
     <string name="please_enter_server_url">PLEASE ENTER SERVER URL</string>
     <string name="please_enter_passcode">現在のパスコードを入力して下さい。</string>
